[BlinkGenPropertyTrees] Filter effects should be clipped

According to the spec, filtering should apply before clipping
(https://drafts.fxtf.org/css-masking-1/#placement): "...effects are applied to
the element in order: filter effects, clipping, masking and opacity."

This patch fixes clip-path order with BlinkGenPropertyTrees (BGPT) which exposed
the issue of filter and clip order. Testcases have been added showing the fixed
behavior with BGPT, and the non-BGPT results have been marked as failing.

NOTRY=true

Bug: 906154, 907175
Change-Id: I5e9c7dbb7c694afc623fbc3bb2c7f2f8cc458195
Reviewed-on: https://chromium-review.googlesource.com/c/1344217
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609847}
Former-commit-id: 396a0004389678677bdf37c2ad683b56afdf216e